--- a/doc/ems-application-guide/src/energyplus-runtime-language/variables.tex
+++ b/doc/ems-application-guide/src/energyplus-runtime-language/variables.tex
@@ -106,7 +106,7 @@ WarmupFlag & 0 (= not during warmup) or 1 (= during warmup) \tabularnewline
 \bottomrule
 \end{longtable}
 
-For built-in variable CurrentEnvironment, it depends on how many SizingPeriod modules and RunPeriod modules are activated. For example, if SizingPeriod:DesignDay, SizingPeriod:WeatherFileDays, SizingPeriod:WeatherFileConditionType, RunPeriod are all specified, then the index for each one is: 1 for heating design day, 2 for cooling design day, 3 for SizingPeriod:WeatherFileDays, 4 for SizingPeriod:WeatherFileConditionType, and 5 for RunPeriod. For accurate index values, please lookup the table EnvironmentPeriods in eplusout.sql file.
+For the built-in variable CurrentEnvironment, it depends on how many SizingPeriod modules and RunPeriod modules are activated. For example, if SizingPeriod:DesignDay, SizingPeriod:WeatherFileDays, SizingPeriod:WeatherFileConditionType, RunPeriod are all specified, then the index for each one is: 1 for heating design day, 2 for cooling design day, 3 for SizingPeriod:WeatherFileDays, 4 for SizingPeriod:WeatherFileConditionType, and 5 for RunPeriod. For accurate index values, please lookup the table EnvironmentPeriods in eplusout.sql file.
 
 \subsection{Trend Variables}\label{trend-variables}
 
